3047
Minimal self-contained test case attached: 2278.zip. My next move is to disable implicit caching.

-jason
 
{code}
 ~/code/scratch/2278: ./test.sh 
+ scalac -version
Scala compiler version 2.8.0.r20100-b20091211020212 -- Copyright 2002-2010, LAMP/EPFL
+ scalac -d out -classpath out MonadBind.scala
+ scalac -d out -classpath out UseMonad.scala
UseMonad.scala:4: error: could not find implicit value for parameter e: Monad[Tuple1]
  implicitly[Monad[Tuple1]]
            ^
one error found
+ echo All of these work 'though!'
All of these work though!
+ scalac -d out -classpath out UseMonadOKA.scala
+ scalac -d out -classpath out UseMonadOKB.scala
+ scalac -d out -classpath out MonadBind.scala UseMonad.scala
{code}
